testdata/fixtures/audit/negative/debug_mode_neg_fastapi_prod_py.py
from fastapi import FastAPI

app = FastAPI(title="Production API")
